[package]
name = "htldev"
version = "0.1.1"
edition = "2021"
description = "Search and browse HTL.dev documentation from the terminal"
license = "MIT"
repository = "https://github.com/DenizCiger/better-htldev"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "5"
keyring = "2"
globset = "0.4.18"
htmd = "0.1"
ratatui = "0.30.0"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
rpassword = "7"
rusqlite = { version = "0.39.0", features = ["bundled"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
